@@ -10,6 +10,7 @@ Revision history for DBIx::Class
           notably on_connect* failures now properly abort the entire connect
         - Fix corner case of stringify-only overloaded objects being used in
           create()/populate()
+        - Fix t/52leaks.t failures on compilerless systems (RT#104429)
 
     * Misc
         - Skip tests in a way more intelligent and speedy manner when optional
